[gd_scene load_steps=6 format=3 uid="uid://beg65mxmwr3sa"]

[ext_resource type="Script" uid="uid://bwhs81xqpvbpn" path="res://Scripts/UI/SettingsMenu.gd" id="1_q4b8a"]
[ext_resource type="FontFile" uid="uid://donfw1xb4wbfa" path="res://Assets/Fonts/Jersey10-Regular.ttf" id="2_s4v4x"]

[sub_resource type="LabelSettings" id="LabelSettings_jw4so"]
font = ExtResource("2_s4v4x")
font_size = 64

[sub_resource type="LabelSettings" id="LabelSettings_q4b8a"]
font = ExtResource("2_s4v4x")
font_size = 24

[sub_resource type="ButtonGroup" id="ButtonGroup_q4b8a"]

[node name="SettingsMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_q4b8a")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="LabelTitle" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -281.0
offset_top = 39.0
offset_right = 281.0
offset_bottom = 109.0
grow_horizontal = 2
text = "Paramètres"
label_settings = SubResource("LabelSettings_jw4so")
horizontal_alignment = 1
vertical_alignment = 1

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -195.875
offset_top = -118.5
offset_right = 195.875
offset_bottom = 118.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/h_separation = 30
columns = 2

[node name="LabelResolutions" type="Label" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "Résolutions"
label_settings = SubResource("LabelSettings_q4b8a")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ResolutionOptions" type="OptionButton" parent="GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
flat = true

[node name="LabelFullscreen" type="Label" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Plein écran"
label_settings = SubResource("LabelSettings_q4b8a")
horizontal_alignment = 1
vertical_alignment = 1

[node name="FullscreenCheckbox" type="CheckBox" parent="GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
flat = true

[node name="LabelAudioMaster" type="Label" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Master"
label_settings = SubResource("LabelSettings_q4b8a")
horizontal_alignment = 1
vertical_alignment = 1

[node name="MasterSlider" type="HSlider" parent="GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
step = 10.0

[node name="LabelAudioMusic" type="Label" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Musique"
label_settings = SubResource("LabelSettings_q4b8a")
horizontal_alignment = 1
vertical_alignment = 1

[node name="MusicSlider" type="HSlider" parent="GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
step = 10.0

[node name="LabelAudioSFX" type="Label" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Effets sonores"
label_settings = SubResource("LabelSettings_q4b8a")
horizontal_alignment = 1
vertical_alignment = 1

[node name="SFXSlider" type="HSlider" parent="GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
step = 10.0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -127.5
offset_top = 88.0
offset_right = 127.5
offset_bottom = 170.0
grow_horizontal = 2
grow_vertical = 2

[node name="BackButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("2_s4v4x")
theme_override_font_sizes/font_size = 28
button_group = SubResource("ButtonGroup_q4b8a")
text = "Retour au jeu"
flat = true

[node name="BackToMenuButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 8
theme_override_fonts/font = ExtResource("2_s4v4x")
theme_override_font_sizes/font_size = 28
button_group = SubResource("ButtonGroup_q4b8a")
text = "Retour au menu principal"
flat = true

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
